<resources>
    <string name="app_name">Yssa</string>

    <!--Main Activity-->
    <string name="levo">levo</string>
    <string name="sonus">S O N U S</string>
    <string name="infer_sign_in">Hello, \nLet\'s Get \nYou Logged In</string>
    <string name="login_camel_case">Login</string>

    <!--Login Activity-->
    <string name="title_activity_login">LoginActivity</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">login</string>
    <string name="login_caps">L O G I N</string>

    <!--Welcome Fragment-->
    <string name="welcome_employee">Welcome Back </string>

    <!--Management Console Activity-->
    <!--Management Console Nav Menu-->
    <string name="mc_schedule">Schedule</string>
    <string name="mc_assignments">Assignments</string>
    <string name="mc_schematic">Schematic</string>
    <string name="mc_my_account">My Account</string>
    <string name="mc_messenger">Messenger</string>
    <string name="mc_manage_associates">Manage Associates</string>

    <!--My Account Fragment-->
    <string name="update_email">Update Email</string>
    <string name="update_display_name">Update Display Name</string>
    <string name="update_password">Update Password</string>
    <string name="enter_img_path">Enter Image Path</string>
    <string name="submit">Submit</string>

    <!--Manage Associates Fragment-->
    <string name="add_user">Add User</string>

    <!-- Messenger -->
    <string name="sender">Sender</string>
    <string name="message_preview">Message</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="max_message_length">300 characters</string>
    <string name="compose_new_message">Compose New Message</string>

    <!-- Associate Console -->
    <string name="title_activity_associate_console">Associate Console</string>

    <!-- Inspect Equipment Fragment -->
    <string name="inspectequipment">Inspect Equipment</string>
    <string name="partplaceholder">part....</string>
    <string name="check_all">Check All</string>
    <string name="complete">Complete</string>

    <!-- Test Audio -->
    <string name="test_audio">Test Audio</string>
    <string name="test_audio_greeting">Let\'s Test Your Audio!</string>

    <!-- Test Microphone -->
    <string name="test_microphone">Test Microphone</string>
    <string name="test_mic_greeting">Let\'s Test Your\nMicrophone!</string>


    <string name="listening">Listening…</string>

    <!-- Order Picking Activity -->
    <string name="user_report">User Report</string>
    <string name="current_order">Current Order</string>
    <string name="get_next_order">Get Next Order</string>
    <string name="slot">Slot: </string>
    <string name="pick">Pick: </string>
    <string name="product_id">Prouct Id</string>


    <string name="register">Register</string>
    <string name="associate">Associate</string>
    <string name="forklift">Forklift</string>
    <string name="electricpalletjack">Electric Pallet Jack</string>
    <string name="departmentplaceholder">department....</string>
    <string name="management">Management</string>
    <string name="order_number">order number</string>
    <string name="id_number">employee id number</string>
    <string name="store_number">store number</string>
    <string name="product_description">product description</string>
    <string name="pallet_count">pallet count</string>
    <string name="door_number">door number</string>
    <string name="full_name">full name</string>
    <string name="enter_email">Enter Email: </string>
    <string name="enter_password">Enter Password: </string>
    <string name="enter_display_name">Enter Display Name: </string>
    <string name="enter_full_name">Enter Full Name: </string>
    <string name="enter_employee_id">Enter Employee Id: </string>
    <string name="title_activity_management_console">Management Console</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_load_associate_views">Associate View</string>
    <string name="action_load_management_views">Management View</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="username_placeholder">Username:</string>
    <string name="user_id_placeholder">UserId:</string>
    <string name="associate_name_placeholder">Name:</string>

    <string name="order_id">Order Id:</string>
    <string name="user_id">User Id:</string>


    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login_register">LoginRegisterActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>


</resources>