<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_account"
            android:icon="@drawable/home"
            android:title="@string/mc_my_account"  />
        <item
            android:id="@+id/manage_associates"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/mc_manage_associates" />
        <item
            android:id="@+id/messenger"
            android:icon="@android:drawable/sym_action_chat"
            android:title="@string/mc_messenger" />
        <item
            android:id="@+id/schematic"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/mc_schematic" />
        <item
            android:id="@+id/assignments"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/mc_assignments" />
        <item
            android:id="@+id/schedule"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/mc_schedule" />
    </group>
</menu>