<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/management_console_navigation"
    app:startDestination="@+id/my_account">

    <fragment
        android:id="@+id/my_account"
        android:name="crysalis.example.yssa.ui.managementconsole.myaccount.MyAccountFragment"
        android:label="@string/mc_my_account"
        tools:layout="@layout/fragment_my_account" />

    <fragment
        android:id="@+id/manage_associates"
        android:name="crysalis.example.yssa.ui.managementconsole.manageassociates.ManageAssociatesFragment"
        android:label="@string/mc_manage_associates"
        tools:layout="@layout/fragment_manage_associates" />

    <fragment
        android:id="@+id/messenger"
        android:name="crysalis.example.yssa.ui.managementconsole.messenger.MessengerFragment"
        android:label="@string/mc_messenger"
        tools:layout="@layout/fragment_messenger" />

    <fragment
        android:id="@+id/schematic"
        android:name="crysalis.example.yssa.ui.managementconsole.schematic.SchematicFragment"
        android:label="@string/mc_schematic"
        tools:layout="@layout/fragment_schematic" />
    <fragment
        android:id="@+id/assignments"
        android:name="crysalis.example.yssa.ui.managementconsole.assignments.AssignmentsFragment"
        android:label="@string/mc_assignments"
        tools:layout="@layout/fragment_assignments" />
    <fragment
        android:id="@+id/schedule"
        android:name="crysalis.example.yssa.ui.managementconsole.schedule.ScheduleFragment"
        android:label="@string/mc_schedule"
        tools:layout="@layout/fragment_schedule" />
</navigation>