<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/offWhite"
    >

    <FrameLayout
        android:id="@+id/user_input_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/tv_product_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:text="@string/product_description"
        />
    <TextView
        android:id="@+id/tv_order_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:text="@string/order_number"
        />
    <TextView
        android:id="@+id/tv_store_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:text="@string/store_number"
        />
    <TextView
        android:id="@+id/tv_pallet_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:text="@string/pallet_count"
        />
    <TextView
        android:id="@+id/tv_door_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:text="@string/door_number"
        />
    <!--
        -product description
        -order number
        -store number
        -pallet count
        -door number
    -->
</LinearLayout>