<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_picker_name_and_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textSize="24sp"
        android:fontFamily="@font/anton"
        android:layout_margin="8dp"
        />

    <TextView
        android:id="@+id/tv_id_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_number"
        android:textSize="24sp"
        android:fontFamily="@font/anton"
        android:layout_margin="8dp"
        />

    <TextView
        android:id="@+id/tv_order_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_number"
        android:textSize="24sp"
        android:fontFamily="@font/anton"
        android:layout_margin="8dp"
        />

    <TextView
        android:id="@+id/tv_store_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_number"
        android:textSize="24sp"
        android:fontFamily="@font/anton"
        android:layout_margin="8dp"
        />

</LinearLayout>