<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/offWhite">

    <CheckBox
        android:id="@+id/checkbox_manage_associate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/tv_associate_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/associate_name_placeholder"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:layout_margin="8dp"
            />
        <TextView
            android:id="@+id/tv_associate_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_placeholder"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:layout_margin="8dp"
            />
        <TextView
            android:id="@+id/tv_associate_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_id_placeholder"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:layout_margin="8dp"
            />
    </LinearLayout>
</LinearLayout>