<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ui.managementconsole.manageassociates.ManageAssociatesFragment"
    android:background="@android:drawable/dialog_holo_light_frame">

    <CheckBox
        android:id="@+id/checkbox_messages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

            <TextView
                android:id="@+id/tv_sender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/sender"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/tv_time_recieved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="center|end"
                android:textColor="@color/colorPrimary"
                android:text="@string/time"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_message_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/message_preview"
                android:textSize="16sp"
                android:textStyle="bold"
                android:maxLines="2"
                />
    </LinearLayout>
</LinearLayout>